; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/touchscreen/extr_tsc2007.c_tsc2007_xfer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/touchscreen/extr_tsc2007.c_tsc2007_xfer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tsc2007 = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"i2c io error: %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"data: 0x%x, val: 0x%x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tsc2007*, i32)* @tsc2007_xfer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tsc2007_xfer(%struct.tsc2007* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tsc2007*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store %struct.tsc2007* %0, %struct.tsc2007** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.tsc2007*, %struct.tsc2007** %4, align 8
  %9 = getelementptr inbounds %struct.tsc2007, %struct.tsc2007* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = call i64 @i2c_smbus_read_word_data(%struct.TYPE_2__* %10, i32 %11)
  store i64 %12, i64* %6, align 8
  %13 = load i64, i64* %6, align 8
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %2
  %16 = load %struct.tsc2007*, %struct.tsc2007** %4, align 8
  %17 = getelementptr inbounds %struct.tsc2007, %struct.tsc2007* %16, i32 0, i32 0
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i64, i64* %6, align 8
  %21 = call i32 @dev_err(i32* %19, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i64 %20)
  %22 = load i64, i64* %6, align 8
  %23 = trunc i64 %22 to i32
  store i32 %23, i32* %3, align 4
  br label %36

24:                                               ; preds = %2
  %25 = load i64, i64* %6, align 8
  %26 = call i32 @swab16(i64 %25)
  %27 = ashr i32 %26, 4
  store i32 %27, i32* %7, align 4
  %28 = load %struct.tsc2007*, %struct.tsc2007** %4, align 8
  %29 = getelementptr inbounds %struct.tsc2007, %struct.tsc2007* %28, i32 0, i32 0
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i64, i64* %6, align 8
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @dev_dbg(i32* %31, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i64 %32, i32 %33)
  %35 = load i32, i32* %7, align 4
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %24, %15
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i64 @i2c_smbus_read_word_data(%struct.TYPE_2__*, i32) #1

declare dso_local i32 @dev_err(i32*, i8*, i64) #1

declare dso_local i32 @swab16(i64) #1

declare dso_local i32 @dev_dbg(i32*, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
